<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/host">

    <ImageView
        android:id="@+id/back"
        android:src="@mipmap/back"
        android:scaleType="centerInside"
        android:layout_marginLeft="@dimen/x8"
        android:layout_marginTop="@dimen/y6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ImageView
        android:id="@+id/iv_register"
        android:src="@mipmap/sport2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y56"
        android:layout_marginBottom="@dimen/y4"
        android:layout_marginTop="@dimen/y38"
        android:scaleType="centerInside"/>
    <TextView
        android:id="@+id/tv"
        android:text="中国体育彩票"
        android:textSize="20sp"
        android:textColor="@color/title"
        android:layout_below="@+id/iv_register"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/y38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilayout_phone"
        android:layout_below="@+id/tv"
        android:layout_width="@dimen/x296"
        android:layout_height="@dimen/y38"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/edit_phone"
            android:ems="11"
            android:textSize="12sp"
            android:inputType="phone"
            android:hint="@string/hint_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilayout_password"
        android:layout_below="@+id/tilayout_phone"
        android:layout_width="@dimen/x296"
        android:layout_height="@dimen/y38"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/edit_password"
            android:hint="@string/hint_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textSize="12sp" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilayout_confirmpassword"
        android:layout_below="@+id/tilayout_password"
        android:layout_width="@dimen/x296"
        android:layout_height="@dimen/y38"
        android:layout_centerHorizontal="true">
        <EditText
            android:id="@+id/edit_confirmpassword"
            android:hint="@string/hint_password_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textSize="12sp" />
    </android.support.design.widget.TextInputLayout>


    <CheckBox
        android:id="@+id/checkbox"
        android:textSize="12sp"
        android:textColor="@color/title"
        android:checked="true"
        android:button="@mipmap/check"
        android:text="@string/warning"
        android:layout_below="@+id/tilayout_confirmpassword"
        android:layout_width="@dimen/x296"
        android:layout_height="@dimen/y12"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/bt_register"
        android:text="@string/register"
        android:textSize="16sp"
        android:textColor="@color/login_text_noenable"
        android:layout_marginTop="@dimen/y30"
        android:layout_below="@+id/checkbox"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login"
        android:enabled="false"
        android:layout_width="@dimen/x277"
        android:layout_height="@dimen/y38" />

</RelativeLayout>
