<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="10dp">
        <ImageButton
            android:id="@+id/goback"
            android:background="@drawable/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="消息"
            android:textSize="22sp"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/editor"
            android:text="@string/editor"
            android:textSize="18sp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:visibility="gone"/>
    </RelativeLayout>
    <View
        android:id="@+id/view"
        android:layout_below="@id/title"
        android:layout_width="match_parent"
        android:layout_height="0.3dip"
        android:background="@color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/view"
        android:orientation="vertical">
        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/message_swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ListView
                android:id="@+id/message_listview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </ListView>
        </android.support.v4.widget.SwipeRefreshLayout>
        <View
            android:id="@+id/check_mode_bottom_divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_weight="0"
            android:layout_below="@id/message_swipe_refresh_layout"
            android:background="@color/title_line"
            android:visibility="gone" />
        <LinearLayout
            android:id="@+id/check_mode_bottom"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_weight="0"
            android:background="#f9f9f9"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:weightSum="2"
            android:layout_below="@id/check_mode_bottom_divider"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/check_mode_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#f9f9f9"
                android:layout_weight="0"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="visible" >

                <CheckBox
                    android:id="@+id/check_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:button="@drawable/check_selector" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_all"
                    android:background="@null"
                    android:textColor="@color/common_text"
                    android:textSize="15sp" />
            </LinearLayout>

            <Button
                android:id="@+id/del_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete"
                android:background="@null"
                android:textColor="@color/del_button_text_selector"
                android:textSize="15sp" />
            <Button
                android:id="@+id/read_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/check_all_message"
                android:textColor="@color/read_button_text_selector"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/message_empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/view"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:visibility="gone" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/no_message" />

        <TextView
            android:id="@+id/no_message_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="暂无消息"
            android:textColor="@color/gray_text"
            android:textSize="15sp" />
    </LinearLayout>
</RelativeLayout>
