<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/login_drawer"
    android:layout_height="match_parent"
    android:background="@color/host">

    <!--<ProgressBar-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:id="@+id/login_progress"-->
    <!--style="?android:attr/progressBarStyleLarge"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="8dp"-->
    <!--android:visibility="visible" />-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x62"
            android:layout_marginBottom="@dimen/y4"
            android:layout_marginTop="@dimen/y38"
            android:scaleType="centerInside"
            android:src="@mipmap/sport2" />

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/y38"
            android:gravity="center"
            android:text="中国体育彩票"
            android:textColor="@color/title"
            android:textSize="20sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/username"
            android:layout_width="@dimen/x277"
            android:layout_height="@dimen/y40"
            android:layout_below="@+id/tv"
            android:layout_centerHorizontal="true">

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password"
            android:layout_width="@dimen/x277"
            android:layout_height="@dimen/y40"
            android:layout_below="@+id/username"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="15"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textSize="12sp" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/login"
            android:layout_width="@dimen/x277"
            android:layout_height="@dimen/y38"
            android:layout_below="@+id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/y30"
            android:background="@drawable/login"
            android:enabled="false"
            android:text="@string/login"
            android:textColor="@color/login_text_noenable"
            android:textSize="16sp" />

        <com.media.dingping.cameramonitor.customview.StateButton
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/login"
            android:layout_below="@+id/login"
            android:gravity="left"
            android:text="@string/hint_register"
            android:textSize="12sp"
            app:normalTextColor="@color/normal"
            app:pressedTextColor="@color/pressed" />
    </RelativeLayout>

    <RelativeLayout
        android:gravity="center"
        android:layout_width="@dimen/x250"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="#fff">

        <LinearLayout
            android:layout_width="@dimen/x200"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="vertical"
            android:id="@+id/linearLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="IP  :" />

                <EditText
                    android:id="@+id/server_ip"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@android:drawable/edit_text"
                    android:text="192.168.1.249" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="PORT:" />

                <EditText
                    android:id="@+id/server_port"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@android:drawable/edit_text"
                    android:text="8092" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="PUSH_IP  :" />

                <EditText
                    android:id="@+id/push_server_ip"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@android:drawable/edit_text"
                    android:text="192.168.0.22" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="PUSH_PORT:" />

                <EditText
                    android:id="@+id/push_server_port"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@android:drawable/edit_text"
                    android:text="8833" />
            </LinearLayout>

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="保存" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/linearLayout"
            android:layout_marginStart="25dp"
            android:layout_marginTop="57dp"
            android:ems="11"
            android:hint="@string/hint_phone"
            android:inputType="number"
            android:textSize="12sp" />

    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>
